camera: Fix headerbar colors in light color scheme
In light mode the colors would blend in with the background, making the
buttons invisible. Force dark style on the headerbar to circumvent this.

Fixes #407

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -28,3 +28,14 @@ camera .selectionbutton {
   min-height: 44px;
   min-width: 44px;
 }
+
+camera {
+  background: black;
+  color: #f2f2f2;
+}
+
+camera popover contents,
+camera popover arrow {
+  background: alpha(#181818, .9);
+  color: white;
+}
